--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.17.3",
+    "@mantine/dates": "^7.17.4",
     "@mantine/hooks": "^7.17.3",
     "@mantinex/mantine-logo": "^1.1.0",
     "@tabler/icons-react": "^3.31.0",
